[package]
name = "tt"
version = "0.1.4"
authors = ["The TT Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.2"
oath = "0.10.2"
#merino = "0.1.3"
merino = { git = "https://github.com/ajmwagar/merino" }
rust-crypto = "0.2"
#job_scheduler = "1.0.6" 	# clokwerk is another good scheduler, able to run in background
structopt = { version = "0.3", default-features = false }

