[package]
name = "tt"
version = "0.3.0-tun-v2"
authors = ["The TT Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tun = "0.4"
rand = "0.7.2"
oath = "0.10.2"
sha2 = "0.8.0"
aead = "0.1.1"
libc = "*"
aes-gcm = "0.1.0"
chacha20poly1305 = "0.2"
structopt = { version = "0.3", default-features = false }
#merino = { git = "https://github.com/ajmwagar/merino" }	# merino 0.1.3 has some bugs...
#job_scheduler = "1.0.6" 	# clokwerk is another good scheduler, able to run in background

