[package]
name = "tt"
version = "0.10.4"
authors = ["The TT Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(any(linux, unix, macos))'.dependencies]
tun = "0.4"

[dependencies]
libc = "*"
time = "0.1"		# 0.2 does not support for local time zone for now
rand = "0.7.2"
oath = "0.10.2"
sha2 = "0.8.0"
aead = "0.1.1"
colored = "1.9.0"
aes-gcm = "0.1.0"
lazy_static = "1.4"
chacha20poly1305 = "0.2"
log = { version = "0.4", features = ["std"] }
structopt = { version = "0.3", default-features = false }
#job_scheduler = "1.0.6" 	# clokwerk is another good scheduler, able to run in background

[target.'cfg(target_os = "linux")'.dependencies]
nell = "0.2.0"
